fix: PayPal 寃곗젣 UUID ????먮윭 ?섏젙 諛?寃곗젣 ?덉젙??媛뺥솕
- ?꾨줎?몄뿏?? orderId瑜?UUID ?뺤떇?쇰줈 ?앹꽦?섎룄濡??섏젙 (crypto.randomUUID ?ъ슜)
- 諛깆뿏??verify API: UUID 寃利?諛?諛⑹뼱 濡쒖쭅 異붽?, 鍮?UUID ?뺤떇 ?먮룞 蹂??- portone-payment-confirm: ?숈씪??UUID 寃利?濡쒖쭅 ?곸슜
- PayPalPaymentButton: 以묐났 寃곗젣 諛⑹? 諛?濡쒕뵫 ?곹깭 媛뺥솕
- verify API: 二쇰Ц???놁쓣 ???ы듃??API 議고쉶?섏뿬 Lazy Creation 援ы쁽
- ?먮윭 濡쒓퉭 媛뺥솕: 紐⑤뱺 ?④퀎?먯꽌 ?곸꽭 濡쒓렇 異쒕젰

--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,19 @@ NEXT_PUBLIC_SITE_URL=https://copydrum.com
 NEXT_PUBLIC_MAINTENANCE_MODE=false
 NEXT_PUBLIC_ENABLE_PURCHASE_LOGS=false
 NEXT_PUBLIC_FORCE_GLOBAL_SITE=false
+
+# Analytics Abuse Prevention (어뷰징 방지)
+# 활성화/비활성화 (기본값: true)
+NEXT_PUBLIC_ENABLE_ABUSE_FILTERING=true
+
+# Rate-Based 설정
+NEXT_PUBLIC_ABUSE_MAX_VIEWS_PER_MINUTE=30      # 1분 내 최대 페이지뷰 수 (기본값: 30)
+NEXT_PUBLIC_ABUSE_MAX_VIEWS_PER_SESSION=500    # 세션당 최대 페이지뷰 수 (기본값: 500)
+NEXT_PUBLIC_ABUSE_MIN_AVG_INTERVAL_MS=2000     # 평균 페이지뷰 간격 임계값 (ms, 기본값: 2000)
+
+# Time-Interval 설정
+NEXT_PUBLIC_ABUSE_CONSECUTIVE_FAST_VIEWS=5     # 연속 빠른 페이지뷰 개수 (기본값: 5)
+NEXT_PUBLIC_ABUSE_FAST_VIEW_THRESHOLD_MS=1000  # 빠른 페이지뷰 간격 임계값 (ms, 기본값: 1000)
+
+# 기타 설정
+NEXT_PUBLIC_ABUSE_MIN_VIEWS_FOR_ANALYSIS=10    # 어뷰징 분석 최소 페이지뷰 수 (기본값: 10)
