--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/supabase-js": "^2.95.3",
     "@tanstack/react-query": "^5.90.20",
     "autoprefixer": "^10.4.24",
+    "dayjs": "^1.11.19",
     "firebase": "^12.9.0",
     "i18next": "^25.8.4",
     "lucide-react": "^0.563.0",
